--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>ClockworkMod</head>
+<head><title>ClockworkMod</title></head>
 <body>
 <center><img src="clockworkmodlogo.png"></center>
 </body>
